RESOLVED FIXED273135
Fix build for macOS without NSTextPlaceholder rects.
https://bugs.webkit.org/show_bug.cgi?id=273135
Summary Fix build for macOS without NSTextPlaceholder rects.
Megan Gardner
Reported 2024-04-23 12:06:10 PDT
Fix build for macOS without NSTextPlaceholder rects.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-23 12:06:24 PDT
Megan Gardner
Comment 2 2024-04-23 12:08:21 PDT
EWS
Comment 3 2024-04-23 12:45:50 PDT
Committed 277885@main (595d364ecd7f): <https://commits.webkit.org/277885@main> Reviewed commits have been landed. Closing PR #27639 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.