Fix build for macOS without NSTextPlaceholder rects. https://bugs.webkit.org/show_bug.cgi?id=273135 rdar://126934848

Unreviewed Build Fix.

Make sure that mac builds without NSTextPlaceholder rects
aren't trying to build with them.

* Source/WebKit/UIProcess/Cocoa/WKTextPlaceholder.mm:
(-[WKTextPlaceholder rects]):

Canonical link: https://commits.webkit.org/277885@main